--- a/project_two/starter_code/views/index.html
+++ b/project_two/starter_code/views/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Contacts</title>
+  <meta charset="UTF-8">
+  <title>Contacts</title>
 </head>
 <body>
-  
+  <h1>My People</h1>
+  <button id ="all-categories"> show all categories </button>
+  <button id ="all-contacts"> show all contacts </button>
+
+
 </body>
+<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="/javascripts/scripts.js"></script>
 </html>
