--- a/project_two/starter_code/views/index2.html
+++ b/project_two/starter_code/views/index2.html
@@ -10,7 +10,9 @@
   <h1>My People</h1>
   <button id ="all-categories"> show all categories </button>
   <button id ="all-contacts"> show all contacts </button>
-  <script type="text/javascript" src="/javascripts/scripts.js"></script>
-
+  <button id ="create-contact"> Create New Contact </button>
+  <script type="text/javascript" src="/scripts.js"></script>
+  <ul>
+  </ul>
 </body>
 </html>
